# dgx-llm-serve

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/: dependabot.yml
backends/nim/: README.md  compose.yml
backends/trtllm/: README.md  compose.yml  nano_v3.yaml  nginx.conf  qwen.yaml  qwen_multi.yaml
backends/vllm/: README.md  compose.yml  nginx.conf
backends/vllm/scripts/: vllm-up.sh
docs/: thinking-mode.md  tool-calling.md
docs/plans/: 2026-04-24-model-curation-design.md  2026-04-24-qwen36-smoke-test.md
scripts/: benchmark.py
